@@ -1,3 +1,10 @@
+TAG: annotload-mpr-1
+DATE: 03/22/2005
+STAFF: lec
+RELEASE: A
+CHANGES:
+a) MPR
+
 TAG: annotload-mpr-BP
 DATE: 03/16/2005
 STAFF: lec
